--- a/eq/client/CMakeLists.txt
+++ b/eq/client/CMakeLists.txt
@@ -73,11 +73,11 @@ set_target_properties(Equalizer
   PROPERTIES VERSION ${VERSION} SOVERSION ${VERSION_ABI})
 
 install(FILES ${CLIENT_HEADERS} ${EQ_UTIL_PUBLIC_HEADERS}
-  DESTINATION include/eq/client COMPONENT dev)
+  DESTINATION include/eq/client COMPONENT eqdev)
 install(TARGETS Equalizer
-        ARCHIVE DESTINATION lib COMPONENT dev
-        RUNTIME DESTINATION bin COMPONENT lib
-        LIBRARY DESTINATION lib COMPONENT lib)
+        ARCHIVE DESTINATION lib COMPONENT eqdev
+        RUNTIME DESTINATION bin COMPONENT eqlib
+        LIBRARY DESTINATION lib COMPONENT eqlib)
 install(FILES ${OPTIONS_CMAKE} DESTINATION share/Equalizer/CMake COMPONENT dev)
 
 option(EQUALIZER_OLD_CLIENT_LAYOUT
