Tweak install rule for config files

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -89,7 +89,7 @@ if(GLEW_MX_FOUND)
 endif()
 
 install(DIRECTORY configs DESTINATION share/Equalizer COMPONENT data
-  PATTERN "issue*" EXCLUDE)
+  FILES_MATCHING PATTERN "*.eqc"  PATTERN "issue*" EXCLUDE)
 install(FILES ${CMAKE_CURRENT_BINARY_DIR}/CMakeLists.txt
         DESTINATION share/Equalizer/examples COMPONENT examples)
 install(DIRECTORY include DESTINATION share/Equalizer/examples
