Addition of the configuration option EQ_CONFIG_SATTR_GPU_FILTER. This option takes a string with a basic regular expression which is used to filter the GPU infos. Infos for which the string "nodename:port.device" doesn't match the expression are filtered out.

--- a/eq/server/CMakeLists.txt
+++ b/eq/server/CMakeLists.txt
@@ -124,7 +124,7 @@ set(AUTOCONFIG
     config/server.cpp
 )
 
-set(SERVER_LIBRARIES Equalizer)
+set(SERVER_LIBRARIES Equalizer ${Boost_REGEX_LIBRARY})
 if(HWSD_FOUND)
   list(APPEND SOURCES ${AUTOCONFIG})
   list(APPEND SERVER_LIBRARIES ${HWSD_LIBRARIES})
