Use ConfigParams to transmit GPUFilter. cmdline option support to follow

--- a/eq/server/CMakeLists.txt
+++ b/eq/server/CMakeLists.txt
@@ -124,7 +124,7 @@ set(AUTOCONFIG
     config/server.cpp
 )
 
-set(SERVER_LIBRARIES Equalizer ${Boost_REGEX_LIBRARY})
+set(SERVER_LIBRARIES Equalizer)
 if(HWSD_FOUND)
   list(APPEND SOURCES ${AUTOCONFIG})
   list(APPEND SERVER_LIBRARIES ${HWSD_LIBRARIES})
