--- a/eq/client/CMakeLists.txt
+++ b/eq/client/CMakeLists.txt
@@ -32,20 +32,25 @@ if(HWLOC_GL_FOUND)
   list(APPEND EQ_LIBRARIES ${HWLOC_LIBRARIES})
 endif()
 
+if(SAGE_FOUND)
+  include_directories(${SAGE_INCLUDE_DIRS})
+  list(APPEND EQ_LIBRARIES ${SAGE_LIBRARIES})
+endif()
+
 if(APPLE)
   if(EQ_AGL_USED)
     find_library(CARBON_LIBRARY Carbon)
     list(APPEND EQ_LIBRARIES ${OPENGL_LIBRARIES})
-  endif(EQ_AGL_USED)
+  endif()
   if(EQ_GLX_USED)
     list(APPEND EQ_LIBRARIES GL)
-  endif(EQ_GLX_USED)
-else(APPLE)
+  endif()
+else()
   list(APPEND EQ_LIBRARIES ${OPENGL_gl_LIBRARY})
-endif(APPLE)
+endif()
 if(CUDA_FOUND)
   list(APPEND EQ_LIBRARIES ${CUDA_LIBRARIES})
-endif(CUDA_FOUND)
+endif()
 
 if(EQ_AGL_USED)
   list(APPEND EQ_LIBRARIES ${CARBON_LIBRARY})
