WIP #204: Camera-based head tracking using OpenCV. File format, fabric API, client-side camera init and exit, CMake/OpenCV integration

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -187,6 +187,9 @@ endif()
 if(SAGE_FOUND)
   set(EQ_FEATURES "${EQ_FEATURES} SAGE")
 endif()
+if(OpenCV_FOUND)
+  set(EQ_FEATURES "${EQ_FEATURES} OpenCV")
+endif()
 
 if(MSVC)
   message(STATUS "Configured with${EQ_FEATURES}")
