--- a/eq/client/CMakeLists.txt
+++ b/eq/client/CMakeLists.txt
@@ -37,6 +37,11 @@ if(SAGE_FOUND)
   list(APPEND EQ_LIBRARIES ${SAGE_LIBRARIES})
 endif()
 
+if(OpenCV_FOUND)
+  include_directories(${OpenCV_INCLUDE_DIRS})
+  list(APPEND EQ_LIBRARIES ${OpenCV_LIBRARIES})
+endif()
+
 if(APPLE)
   if(EQ_AGL_USED)
     find_library(CARBON_LIBRARY Carbon)
