--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ script:
  - env TRAVIS=1 make -j8 Equalizer-test ARGS=-V
 before_install:
  - sudo apt-get update -qq
- - sudo apt-get install -qq bison flex libavahi-compat-libdnssd-dev libboost-date-time-dev libboost-regex-dev libboost-serialization-dev libboost-system-dev libgl1-mesa-dev libglewmx1.6-dev libhwloc-dev libibverbs-dev libopencv-dev libopenscenegraph-dev libqt4-dev librdmacm-dev libspnav0 libudt-dev libx11-dev 
+ - sudo apt-get install -qq bison flex libavahi-compat-libdnssd-dev libboost-date-time-dev libboost-program-options-dev libboost-regex-dev libboost-serialization-dev libboost-system-dev libgl1-mesa-dev libglewmx1.6-dev libhwloc-dev libibverbs-dev libopencv-dev libopenscenegraph-dev libqt4-dev librdmacm-dev libspnav0 libudt-dev libx11-dev 
