--- a/eq/server/CMakeLists.txt
+++ b/eq/server/CMakeLists.txt
@@ -134,10 +134,8 @@ set(SERVER_LIBRARIES Equalizer)
 if(HWSD_FOUND)
   list(APPEND SOURCES ${AUTOCONFIG})
   list(APPEND SERVER_LIBRARIES ${HWSD_LIBRARIES})
-  include_directories(${HWSD_INCLUDE_DIRS})
-  add_definitions(-DEQ_USE_HWSD)
   foreach(HWSD_COMPONENT ${HWSD_COMPONENTS})
-    add_definitions(-DEQ_USE_HWSD_${HWSD_COMPONENT})
+    add_definitions(-DEQUALIZER_USE_HWSD_${HWSD_COMPONENT})
   endforeach()
 endif()
 
