Initial DisplayCluster support, including single channel pixel streaming

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -169,6 +169,9 @@ endif()
 if(SAGE_FOUND)
   set(EQ_FEATURES "${EQ_FEATURES} SAGE")
 endif()
+if(DISPLAYCLUSTER_FOUND)
+  set(EQ_FEATURES "${EQ_FEATURES} DisplayCluster")
+endif()
 if(OpenCV_FOUND)
   set(EQ_FEATURES "${EQ_FEATURES} OpenCV")
 endif()
