--- a/eq/client/CMakeLists.txt
+++ b/eq/client/CMakeLists.txt
@@ -39,6 +39,11 @@ if(SAGE_FOUND)
   list(APPEND EQ_LIBRARIES ${SAGE_LIBRARIES})
 endif()
 
+if(DISPLAYCLUSTER_FOUND)
+  include_directories(${DISPLAYCLUSTER_INCLUDE_DIRS})
+  list(APPEND EQ_LIBRARIES ${DISPLAYCLUSTER_LIBRARIES})
+endif()
+
 if(OpenCV_FOUND)
   include_directories(${OpenCV_INCLUDE_DIRS})
   list(APPEND EQ_LIBRARIES ${OpenCV_LIBS})
