--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -175,6 +175,9 @@ endif()
 if(OpenCV_FOUND)
   set(EQ_FEATURES "${EQ_FEATURES} OpenCV")
 endif()
+if(MAGELLAN_FOUND)
+  set(EQ_FEATURES "${EQ_FEATURES} SpaceMouse")
+endif()
 
 if(MSVC)
   message(STATUS "Configured with${EQ_FEATURES}")
