Untested implementation for #133: VRPN head tracking

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -142,6 +142,9 @@ endif()
 if(OpenCV_FOUND)
   set(EQ_FEATURES "${EQ_FEATURES} OpenCV")
 endif()
+if(VRPN_FOUND)
+  set(EQ_FEATURES "${EQ_FEATURES} VRPN")
+endif()
 if(MAGELLAN_FOUND)
   set(EQ_FEATURES "${EQ_FEATURES} SpaceMouse")
 endif()
