--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,11 +17,11 @@ list(APPEND CMAKE_MODULE_PATH ${Equalizer_SOURCE_DIR}/CMake)
 
 include(revision)
 
-set(RELEASE_VERSION OFF) # OFF or 'Mm0' ABI version
-set(LAST_RELEASE 1.4.1)
+set(RELEASE_VERSION 160) # OFF or 'Mm0' ABI version
+set(LAST_RELEASE 1.6.0)
 set(VERSION_MAJOR "1")
-set(VERSION_MINOR "5")
-set(VERSION_PATCH "1")
+set(VERSION_MINOR "6")
+set(VERSION_PATCH "0")
 
 if(CMAKE_OSX_DEPLOYMENT_TARGET)
   set(EQ_OSX_VERSION ${CMAKE_OSX_DEPLOYMENT_TARGET})
