--- a/eq/admin/CMakeLists.txt
+++ b/eq/admin/CMakeLists.txt
@@ -47,14 +47,16 @@ target_link_libraries(EqualizerAdmin EqualizerFabric)
 set_target_properties(EqualizerAdmin
   PROPERTIES VERSION ${VERSION} SOVERSION ${VERSION_ABI})
 
-install(FILES ${ADMIN_HEADERS} DESTINATION include/eq/admin COMPONENT eqdev)
+install(FILES ${ADMIN_HEADERS} DESTINATION include/eq/admin COMPONENT dev)
 
 if (MSVC)
-  install(FILES ${CMAKE_BINARY_DIR}/bin/Debug/EqualizerAdmin.pdb DESTINATION bin COMPONENT lib CONFIGURATIONS Debug)
-  install(FILES ${CMAKE_BINARY_DIR}/bin/RelWithDebInfo/EqualizerAdmin.pdb DESTINATION bin COMPONENT lib CONFIGURATIONS RelWithDebInfo)
+  install(FILES ${CMAKE_BINARY_DIR}/bin/Debug/EqualizerAdmin.pdb
+    DESTINATION bin COMPONENT dev CONFIGURATIONS Debug)
+  install(FILES ${CMAKE_BINARY_DIR}/bin/RelWithDebInfo/EqualizerAdmin.pdb
+    DESTINATION bin COMPONENT dev CONFIGURATIONS RelWithDebInfo)
 endif()
 
 install(TARGETS EqualizerAdmin
-        ARCHIVE DESTINATION lib COMPONENT eqdev
-        RUNTIME DESTINATION bin COMPONENT eqlib
-        LIBRARY DESTINATION lib COMPONENT eqlib)
+        ARCHIVE DESTINATION lib COMPONENT dev
+        RUNTIME DESTINATION bin COMPONENT lib
+        LIBRARY DESTINATION lib COMPONENT lib)
