--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -11,8 +11,8 @@ macro(EQ_ADD_TOOL NAME)
   add_executable(${THIS_TARGET} ${THIS_SOURCES} ${THIS_HEADERS})
   target_link_libraries(${THIS_TARGET} ${THIS_LINK_LIBRARIES})
   set_target_properties(${THIS_TARGET} PROPERTIES OUTPUT_NAME ${NAME} FOLDER "Tools")
-  install(TARGETS ${THIS_TARGET} DESTINATION bin COMPONENT tools)
-  purple_install_pdb(${THIS_TARGET} DESTINATION bin COMPONENT tools)
+  install(TARGETS ${THIS_TARGET} DESTINATION bin COMPONENT apps)
+  purple_install_pdb(${THIS_TARGET} DESTINATION bin COMPONENT apps)
 endmacro(EQ_ADD_TOOL NAME)
 
 include_directories(${CMAKE_SOURCE_DIR}/examples/include
